--- a/public/src/sass/screen.scss
+++ b/public/src/sass/screen.scss
@@ -1,9 +1,29 @@
-html {
-  height: 100%;
+.html {
+    height: 100%;
 }
 
-body {
-  margin: 0;
-  min-height: 100%;
-  font: 16px / 1 sans-serif;
+.body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    min-height: 100%;
+    font: 16px / 1 sans-serif;
+}
+
+.hero {
+    // border: .1em solid grey;
+    margin: 1em;
+}
+
+.titleHeader {
+    margin: 1em;
+}
+
+.center-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
 }
